<resources>
    <string name="app_name">Cinenym</string>
    <string name="search">Search</string>
    <string name="WhatToWatch">What To Watch</string>
    <string name="SeenItList">Seen-It List</string>
    <string name="RandomMovie">Random Movie</string>
    <string name="title_activity_movie_search">Movie search </string>
    <string name="title_activity_what_to_watch">What To Watch</string>
    <string name="title_activity_seen_it_list">Seen It List</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_cinemas_nearby">Cinemas Nearby</string>
    <string name="title_activity_random_movie">Random Movie</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="action_search">Search</string>
    <string name="go">GO</string>
    <string name="profile">Profile</string>
    <string name="cinemasNearby">Cinemas Nearby</string>
    <string name="loading">Loading.......</string>
    <string name="google_android_map_api_key">AIzaSyBvPJqdgwhew6YE5KgicCDZQDyfHrTvd1s</string>
    //action = 28, adventure = 12, animation = 16, comedy = 35, documentary = 99, drama = 18, family
    = 10751, horror = 27
    <string name="action_genre">Action</string>
    <string name="adventure_genre">Adventure</string>
    <string name="animation_genre">Animation</string>
    <string name="comedy_genre">Comedy</string>
    <string name="documentary_genre">Documentary</string>
    <string name="drama_genre">Drama</string>
    <string name="family_genre">Family</string>
    <string name="horror_genre">Horror</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_username">Username</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign In</string>
    <string name="action_sign_up">Need An Account? Sign Up Here!</string>
    <string name="action_sign_up_short">Sign Up</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

</resources>
